# python-workshop

./: .pylintrc  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: github-pages.yml
src/: agenda.md  conf.py  index.md  introduction.md  next.md  tooling.md
src/basics/: index.md
src/basics/1/: simple.md
src/basics/2/: repl.md
src/basics/3/: expression.py  type.py  typefull.py  typeless.py  variables.md
src/basics/types/: types.md
src/basics/types/1/: none.md  none.py
src/basics/types/2/: bool.md  bool.py
src/basics/types/3/: float.py  int.py  numbers.md
src/basics/types/4/: bytes.py  str.md  str.py
src/basics/types/5/: tuple.md  tuple.py
src/basics/types/6/: list.md  list.py
src/basics/types/7/: dict.md  dict.py
src/features/: batteries-included.md  functional-and-oop.md  indentation.md  index.md  scripting-language.md  typeless.md
src/in-depth/: index.md
src/in-depth/class/: index.md  summary.md
src/in-depth/class/1/: variables.md  variables.py
src/in-depth/class/10/: example.py  unreal.md
src/in-depth/class/11/: example.py  last.md
src/in-depth/class/12/: example.py  special.md
src/in-depth/class/2/: everything.md  everything.py
src/in-depth/class/3/: instances.md  instances.py
src/in-depth/control/: index.md
src/in-depth/dict/: index.md  update.py
src/in-depth/dict/1/: get.md  (+1 more)
src/in-depth/functions/: index.md
src/in-depth/list/: append.py  concat.py  index.md  insert.py  len.py  pop.py
src/in-depth/modules/: index.md
src/in-depth/str/: concat.py  getitem.py  index.md  quotes.py  slicing.py
(+83 files in other folders)
