[tool.poetry]
name = "python-workshop"
version = "1.0.0"
description = "Python Workshops"
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^5.3.0"
furo = "^2023.3.27"
myst-parser = "^1.0.0"
sphinx-copybutton = "^0.5.1"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-autobuild = "^2024.2.4"
sphinx-inline-tabs = "^2023.4.21"
httpx = {extras = ["http2"], version = "^0.26.0"}

[tool.poetry.group.dev.dependencies]
autohooks-plugin-pylint = ">=22.8.1"
autohooks-plugin-black = ">=22.8.1"
autohooks-plugin-isort = ">=22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310', 'py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.black',
  'autohooks.plugins.isort',
]
